--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,18 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>BadBank</title>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+
+
+    <!-- bootstrap css -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+    />
+        <link rel="stylesheet" type="text/css" href="../src/index.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -39,5 +50,24 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
+    <!-- load react -->
+    <script src="https://unpkg.com/react/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom/umd/react-dom.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-router@5.2.1/umd/react-router.min.js" crossorigin></script>
+    <script src="https://unpkg.com/react-router-dom@5.2.1/umd/react-router-dom.min.js" crossorigin></script>
+
+
+     <!-- load our react component. -->
+     <script src="../src/context.js" defer type="text/babel"></script>
+     <script src="../src/navbar.js" defer type="text/babel"></script>
+     <script src="../src/createaccount.js" defer type="text/babel"></script>
+     <script src="../src/login.js" defer type="text/babel"></script>
+     <script src="../src/deposit.js" defer type="text/babel"></script>
+     <script src="../src/withdraw.js" defer type="text/babel"></script>
+     <script src="../src/transfer.js" defer type="text/babel"></script>
+     <script src="../src/balance.js" defer type="text/babel"></script>
+     <script src="../src/alldata.js" defer type="text/babel"></script>
+     <script src="../src/home.js" defer type="text/babel"></script>
+     <script src="../src/index.js" defer type="text/babel"></script>
+   </body>
 </html>
